--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@types/node": "^22.9.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.0",
+    "mongoose": "^8.8.1",
     "nodemon": "^3.1.7"
   }
 }
