--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,13 @@
 {
   "compilerOptions": {
-    "lib": ["es2017", "dom"], 
     "target": "es2017", 
     "module": "commonjs", 
     "esModuleInterop": true, 
+    "moduleResolution": "Node",
     "forceConsistentCasingInFileNames": true, 
     "strict": true,            
     "outDir": "./out",
     "rootDir": "./",
-    "allowJs": true,
-    "skipLibCheck": true
   },
   "include": [
       "public/scripts/**/*.ts",
