--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,18 @@
 {
-  "compilerOptions": {
-    "target": "es2017", 
-    "module": "commonjs", 
-    "esModuleInterop": true, 
-    "moduleResolution": "Node",
-    "forceConsistentCasingInFileNames": true, 
-    "strict": true,            
-    "outDir": "./out",
-    "rootDir": "./",
-  },
-  "include": [
-      "public/scripts/**/*.ts",
-      "src/**/*.ts"
-  ],
-  "exclude": [
-      "node_modules"
-  ]
+    "compilerOptions": {
+        "target": "es2017", 
+        "module": "ESNext", 
+        "esModuleInterop": true, 
+        "moduleResolution": "Node",
+        "forceConsistentCasingInFileNames": true, 
+        "strict": true,            
+        "outDir": "./dist",
+        "rootDir": "./",
+    },
+    "include": [
+        "public/scripts/**/*.ts",
+    ],
+    "exclude": [
+        "node_modules"
+    ],
 }
