--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "es2017", 
-        "module": "CommonJS", 
+        "module": "ESNext", 
         "outDir": "../dist/src",  
         "rootDir": "./src",      
         "esModuleInterop": true,
