--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bankan",
   "version": "1.0.0",
   "main": "./dist/public/scripts/app.js",
+  "type": "module",
   "scripts": {
     "build": "webpack && npm run build-backend",
     "build-frontend": "webpack",
