--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-merge-refs": "^2.1.1",
+        "react-router-dom": "^7.1.5",
+        "socket.io-client": "^4.8.1",
         "uuid": "^11.0.5"
     },
     "devDependencies": {
