--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,12 @@
 {
   "name": "bankan",
   "version": "1.0.0",
-  "main": "./dist/public/scripts/app.js",
+  "main": "./dist/app.js",
   "type": "module",
   "scripts": {
-    "build": "webpack && npm run build-backend",
-    "build-frontend": "webpack",
-    "build-backend": "tsc --project ./server/tsconfig.json",
-    "start": "nodemon ./dist/src/app.js"
+    "build": "tsc --project ./tsconfig.json",
+    "start": "nodemon --ext js dist/src/app.js",
+    "dev": "npm run build && npm run start"
   },
   "keywords": [],
   "author": "",
@@ -36,8 +35,9 @@
     "@types/node": "^22.9.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "mongoose": "^8.8.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.9",
+    "socket.io": "^4.8.1"
   }
 }
