--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "ESNext", 
         "module": "ESNext", 
-        "outDir": "../dist/src",  
+        "outDir": "./dist",  
         "rootDir": "./src",      
         "esModuleInterop": true,
         "moduleResolution": "Node",
