--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.0",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/mongodb": "^4.0.6",
     "@types/mongoose": "^5.11.96",
     "clean-webpack-plugin": "^4.0.0",
@@ -33,9 +34,12 @@
   },
   "dependencies": {
     "@types/node": "^22.9.0",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "nodemon": "^3.1.9",
     "socket.io": "^4.8.1"
