--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@dnd-kit/core": "^6.3.1",
+        "jwt-decode": "^4.0.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-merge-refs": "^2.1.1",
