--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
+        "@types/jwt-decode": "^2.2.1",
         "@types/react": "^18.3.17",
         "@types/react-dom": "^18.3.5",
         "@vitejs/plugin-react": "^4.3.4",
